# secretvault

./: .gitignore  README.md  pyproject.toml
secretvault/: audit.py  cli.py  crypto.py  storage.py
secretvault.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
secretvault/secretvault.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
