[project]
name = "secretvault"
version = "0.1.0"
description = "A local, encrypted secrets vault with a tamper-evident audit log."
requires-python = ">=3.9"
dependencies = [
    "cryptography==49.0.0",
    "click==8.4.1",
]

[project.scripts]
vault = "secretvault.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["secretvault*"]